--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.1.0",
     "@tailwindcss/vite": "^4.1.7",
+    "dompurify": "^3.3.0",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
