--- a/sanity_cms/package.json
+++ b/sanity_cms/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/code-input": "^6.0.3",
     "@sanity/vision": "^3.90.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
